--- a/BeerSearch.html
+++ b/BeerSearch.html
@@ -4,11 +4,12 @@
 	<title>Basic Beer selection site with favoriting functionality</title>
 	<link rel ="stylesheet" href = "BeerSearch.css">
 	<script src = "JQuery_Uncompressed.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nunito" rel="stylesheet">
 
 	<!--
-		Fix long ass titles management
-		favorites tab load more shouldn't work
-		enter for searchbar
+		cute button onclick
+		fix image wiggle
+		click on beer for more detailed popup (card expands to the screen and more detail?)
 	-->
 
 </head>
@@ -43,5 +44,7 @@
 
 </body>
 <script src = "BeerSearch.js"></script>
+<span id = ruler>
+	</span>
 
 </html>
