button click fix
fixed button click

on queu (spelling?)

I think something weird might be happening with load more and opacity?
fix image wiggle
click on beer for more detailed popup (card expands to the screen and more detail?)

--- a/BeerSearch.html
+++ b/BeerSearch.html
@@ -7,9 +7,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nunito" rel="stylesheet">
 
 	<!--
-		cute button onclick
+		I think something weird might be happening with load more and opacity?
 		fix image wiggle
 		click on beer for more detailed popup (card expands to the screen and more detail?)
+
 	-->
 
 </head>
