--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Basic Beer selection site with favoriting functionality</title>
 	<link rel ="stylesheet" href = "BeerSearch.css">
 	<script src = "JQuery_Uncompressed.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nunito" rel="stylesheet">
 
 	<!--
